--- a/dirmenu.1
+++ b/dirmenu.1
@@ -1,8 +1,8 @@
-.TH DMENU 1 dmenu\-VERSION
+.TH DIRMENU 1 dirmenu\-VERSION
 .SH NAME
-dmenu \- dynamic menu
+dirmenu \- directory menu
 .SH SYNOPSIS
-.B dmenu
+.B dirmenu
 .RB [ \-bfiv ]
 .RB [ \-l
 .IR lines ]
@@ -20,38 +20,39 @@ dmenu \- dynamic menu
 .IR color ]
 .RB [ \-sf
 .IR color ]
+.RB [ \-db
+.IR color ]
+.RB [ \-df
+.IR color ]
 .RB [ \-w
 .IR windowid ]
-.P
-.BR dmenu_run " ..."
+.RB [ \-d
+.IR directory ]
 .SH DESCRIPTION
-.B dmenu
-is a dynamic menu for X, which reads a list of newline\-separated items from
-stdin.  When the user selects an item and presses Return, their choice is printed
-to stdout and dmenu terminates.  Entering text will narrow the items to those
-matching the tokens in the input.
-.P
-.B dmenu_run
-is a script used by
-.IR dwm (1)
-which lists programs in the user's $PATH and runs the result in their $SHELL.
+.B dirmenu
+is a dynamic menu for X based on 
+.IR dmenu (1),
+which shows the files from a directory.
+When the user selects an item and presses Return, their choice is printed
+to stdout and dirmenu terminates.  Entering text will narrow the items to those
+matching the tokens in the input. Pressing tab will switch the directory (if a directory is highlighted).
 .SH OPTIONS
 .TP
 .B \-b
-dmenu appears at the bottom of the screen.
+dirmenu appears at the bottom of the screen.
 .TP
 .B \-f
-dmenu grabs the keyboard before reading stdin.  This is faster, but will lock up
+dirmenu grabs the keyboard before reading the directory content.  This is faster, but will lock up
 X until stdin reaches end\-of\-file.
 .TP
 .B \-i
-dmenu matches menu items case insensitively.
+dirmenu matches menu items case insensitively.
 .TP
 .BI \-l " lines"
-dmenu lists items vertically, with the given number of lines.
+dirmenu lists items vertically, with the given number of lines.
 .TP
 .BI \-m " monitor"
-dmenu is displayed on the monitor number supplied. Monitor numbers are starting
+dirmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
 .TP
 .BI \-p " prompt"
@@ -75,17 +76,26 @@ defines the selected background color.
 .BI \-sf " color"
 defines the selected foreground color.
 .TP
+.BI \-db " color"
+defines the directory background color.
+.TP
+.BI \-df " color"
+defines the directory foreground color.
+.TP
 .B \-v
 prints version information to stdout, then exits.
 .TP
 .BI \-w " windowid"
 embed into windowid.
+.TP
+.BI \-d " directory"
+start in directory.
 .SH USAGE
-dmenu is completely controlled by the keyboard.  Items are selected using the
+dirmenu is completely controlled by the keyboard.  Items are selected using the
 arrow keys, page up, page down, home, and end.
 .TP
 .B Tab
-Copy the selected item to the input field.
+Copy the selected item to the input field. If it is a directory, switch to that directory.
 .TP
 .B Return
 Confirm selection.  Prints the selected item to stdout and exits, returning
@@ -178,5 +188,4 @@ Page up
 M\-l
 Down
 .SH SEE ALSO
-.IR dwm (1),
-.IR stest (1)
+.IR dmenu (1)
