minor changes in manpage

--- a/dirmenu.1
+++ b/dirmenu.1
@@ -31,8 +31,8 @@ dirmenu \- directory menu
 .SH DESCRIPTION
 .B dirmenu
 is a dynamic menu for X based on 
-.IR dmenu (1),
-which shows the files from a directory.
+.IR dmenu (1).
+dirmenu shows the files from a directory.
 When the user selects an item and presses Return, their choice is printed
 to stdout and dirmenu terminates.  Entering text will narrow the items to those
 matching the tokens in the input. Pressing tab will switch the directory (if a directory is highlighted).
