implemented option to show hidden files

--- a/dirmenu.1
+++ b/dirmenu.1
@@ -3,7 +3,7 @@
 dirmenu \- directory menu
 .SH SYNOPSIS
 .B dirmenu
-.RB [ \-bfiv ]
+.RB [ \-bfivh ]
 .RB [ \-l
 .IR lines ]
 .RB [ \-m
@@ -47,6 +47,9 @@ X until stdin reaches end\-of\-file.
 .TP
 .B \-i
 dirmenu matches menu items case insensitively.
+.TP
+.B \-h
+dirmenu shows hidden files.
 .TP
 .BI \-l " lines"
 dirmenu lists items vertically, with the given number of lines.
